--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.32.0",
+    "@types/bun": "latest",
+    "eslint": "^9.32.0",
+    "jiti": "^2.5.1",
+    "typescript-eslint": "^8.38.0"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
