--- a/packages/intent/package.json
+++ b/packages/intent/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@stringsync/intent",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "dependencies": {
+    "@stringsync/core": "workspace:*"
+  }
 }
