install commanderjs and add commands

--- a/packages/intentx/package.json
+++ b/packages/intentx/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@stringsync/intentx",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "dependencies": {
+    "commander": "^14.0.0"
+  }
 }
