--- a/packages/intentx/package.json
+++ b/packages/intentx/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@stringsync/core": "workspace:*",
+    "@stringsync/intent": "workspace:*",
     "commander": "^14.0.0"
   }
 }
