--- a/examples/calculator/package.json
+++ b/examples/calculator/package.json
@@ -2,6 +2,6 @@
   "name": "@stringsync/intent-examples-calculator",
   "version": "0.0.0",
   "dependencies": {
-    "@stringsync/core": "workspace:*"
+    "@stringsync/intent": "workspace:*"
   }
 }
