--- a/packages/intentx/package.json
+++ b/packages/intentx/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@stringsync/intentx",
   "version": "0.0.0",
+  "bin": {
+    "intentx": "./src/index.ts"
+  },
   "dependencies": {
     "@stringsync/core": "workspace:*",
     "@stringsync/intent": "workspace:*",
