--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,5 +4,5 @@
     "rootDir": "src",
     "outDir": "build"
   },
-  "include": ["./src/**/*", "../intent/src/events/types.ts"]
+  "include": ["./src/**/*"]
 }
