--- a/packages/intent/package.json
+++ b/packages/intent/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@stringsync/intent",
   "version": "0.0.0",
+  "main": "./src/index.ts",
   "dependencies": {
     "@stringsync/core": "workspace:*"
   }
