--- a/examples/whencanyoumeetme/package.json
+++ b/examples/whencanyoumeetme/package.json
@@ -1,7 +1,23 @@
 {
-  "name": "@stringsync/intent-examples-when-can-you-meet-me",
-  "version": "0.0.0",
+  "name": "@stringsync/intent-examples-whencanyoumeetme",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start"
+  },
   "dependencies": {
-    "@stringsync/intent": "workspace:*"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.2"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
