--- a/packages/intent/package.json
+++ b/packages/intent/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "./src/index.ts",
   "dependencies": {
-    "@stringsync/core": "workspace:*"
+    "@stringsync/core": "workspace:*",
+    "typescript": "^5.0.0"
   }
 }
