--- a/packages/intent/package.json
+++ b/packages/intent/package.json
@@ -4,6 +4,10 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@stringsync/core": "workspace:*",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "glob": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/glob": "^8.0.0"
   }
 }
