--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@stringsync/intent",
+  "name": "@stringsync/spec",
   "version": "0.0.0",
   "private": true,
+  "bin": {
+    "spec": "./index.ts"
+  },
   "scripts": {
     "setup": "bun link",
     "teardown": "bun unlink"
@@ -13,5 +16,8 @@
     "prettier": "3.6.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0"
+  },
+  "dependencies": {
+    "commander": "^14.0.0"
   }
 }
