--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
-    "spec": "./dist/index.js",
-    "specd": "./index.ts"
+    "spec": "./dist/index.js"
   },
   "files": [
     "dist/**/*",
@@ -17,12 +16,14 @@
   "scripts": {
     "build": "bun scripts/build.ts",
     "release": "bun scripts/release.ts",
+    "dev": "chokidar '**/*.ts' --command 'bun scripts/build.ts' --ignore '**/node_modules/**' --silent --initial",
     "setup": "bun link",
     "teardown": "bun unlink"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/bun": "latest",
+    "chokidar-cli": "^3.0.0",
     "eslint": "^9.32.0",
     "prettier": "3.6.2",
     "typescript": "^5.9.2",
