--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "chalk": "^5.6.0",
     "commander": "^14.0.0",
-    "glob": "^11.0.3"
+    "glob": "^11.0.3",
+    "zod": "3"
   }
 }
