--- a/examples/calculator/package.json
+++ b/examples/calculator/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.0"
+    "@types/bun": "1.2.21",
+    "typescript": "5.9.2",
+    "vite": "4.4.0"
   },
   "type": "module"
 }
