--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
-    "@types/bun": "latest",
+    "@types/bun": "1.2.21",
     "chokidar-cli": "3.0.0",
     "eslint": "9.32.0",
     "prettier": "3.6.2",
