--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "9.32.0",
     "@types/bun": "1.2.21",
+    "@types/minimatch": "^6.0.0",
     "chokidar-cli": "3.0.0",
     "eslint": "9.32.0",
     "prettier": "3.6.2",
@@ -35,6 +36,7 @@
     "chalk": "5.6.2",
     "commander": "14.0.0",
     "glob": "11.0.3",
+    "minimatch": "^10.0.3",
     "zod": "3"
   }
 }
