--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@modelcontextprotocol/sdk": "1.17.5",
     "chalk": "5.6.2",
     "commander": "14.0.0",
-    "zod": "3"
+    "glob": "^11.0.3",
+    "zod": "^3.25.76"
   }
 }
